[package]
name = "my_user_name"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.2.1"
chrono = "0.4.21"
copypasta = "0.8.1"

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
